--- a/about.html
+++ b/about.html
@@ -46,8 +46,7 @@
               <a href="index.html" class="nav-link">Home</a>
               <a href="#about" class="nav-link active">About</a>
               <a href="podcast.html" class="nav-link">Podcast</a>
-              <a href="#corporate" class="nav-link">Corporate Work</a>
-              <a href="#research" class="nav-link">Research</a>
+              <a href="allies.html" class="nav-link">Allies</a>
               <a href="contact.html" class="nav-link">Contact</a>
             </div>
 
@@ -77,8 +76,7 @@
               <a href="index.html" class="mobile-nav-link">Home</a>
               <a href="#about" class="mobile-nav-link active">About</a>
               <a href="podcast.html" class="mobile-nav-link">Podcast</a>
-              <a href="#corporate" class="mobile-nav-link">Corporate Work</a>
-              <a href="#research" class="mobile-nav-link">Research</a>
+              <a href="allies.html" class="mobile-nav-link">Allies</a>
               <a href="contact.html" class="mobile-nav-link">Contact</a>
 
               <!-- Mobile Social Icons -->
