--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,7 @@
               <a href="index.html" class="nav-link">Home</a>
               <a href="about.html" class="nav-link">About</a>
               <a href="podcast.html" class="nav-link">Podcast</a>
-              <a href="#corporate" class="nav-link">Corporate Work</a>
-              <a href="#research" class="nav-link">Research</a>
+              <a href="allies.html" class="nav-link">Allies</a>
               <a href="contact.html" class="nav-link active">Contact</a>
             </div>
 
@@ -77,8 +76,7 @@
               <a href="index.html" class="mobile-nav-link">Home</a>
               <a href="about.html" class="mobile-nav-link">About</a>
               <a href="podcast.html" class="mobile-nav-link">Podcast</a>
-              <a href="#corporate" class="mobile-nav-link">Corporate Work</a>
-              <a href="#research" class="mobile-nav-link">Research</a>
+              <a href="allies.html" class="mobile-nav-link">Allies</a>
               <a href="contact.html" class="mobile-nav-link active">Contact</a>
 
               <!-- Mobile Social Icons -->
@@ -123,7 +121,7 @@
           >
             <div class="contact-hero-image-container">
               <img
-                src="images1/8a49e740-f360-407b-b615-753cc7660092.JPG"
+                src="images1/contact page.JPG"
                 alt="Professional collaboration workspace"
                 class="contact-hero-image"
               />
@@ -192,7 +190,7 @@
             <div class="col-lg-6">
               <div class="contact-form-image-container">
                 <img
-                  src="images1/IMG_7681_(copy).jpg"
+                  src="images1/Untitled design.png"
                   alt="Team collaboration and communication"
                   class="contact-form-image"
                 />
