--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
               <a href="#" class="nav-link active">Home</a>
               <a href="about.html" class="nav-link">About</a>
               <a href="podcast.html" class="nav-link">Podcast</a>
-              <a href="#corporate" class="nav-link">Corporate Work</a>
-              <a href="#research" class="nav-link">Research</a>
+              <a href="allies.html" class="nav-link">Allies</a>
               <a href="contact.html" class="nav-link">Contact</a>
             </div>
 
@@ -75,8 +74,7 @@
               <a href="#" class="mobile-nav-link active">Home</a>
               <a href="about.html" class="mobile-nav-link">About</a>
               <a href="podcast.html" class="mobile-nav-link">Podcast</a>
-              <a href="#corporate" class="mobile-nav-link">Corporate Work</a>
-              <a href="#research" class="mobile-nav-link">Research</a>
+              <a href="allies.html" class="mobile-nav-link">Allies</a>
               <a href="contact.html" class="mobile-nav-link">Contact</a>
 
               <!-- Mobile Social Icons -->
@@ -299,6 +297,74 @@
                 Training modules focused on communication excellence, emotional
                 intelligence, and collaborative leadership.
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- X-ceptional Section -->
+    <section class="xceptional-section py-5">
+      <div class="container-fluid px-4">
+        <div class="xceptional-content">
+          <div class="row g-5 align-items-center">
+            <div class="col-lg-6">
+              <div class="xceptional-text-content">
+                <h2 class="xceptional-title">X-ceptional</h2>
+                <p class="xceptional-tagline">
+                  "What makes me X-ceptional isn't just what I say — it's how I
+                  listen, connect, and elevate every voice in the room."
+                </p>
+                <div class="xceptional-description">
+                  <p class="mb-6">
+                    In a world full of noise, I believe in conversations that
+                    cut through.
+                  </p>
+                  <p class="mb-6">
+                    Whether I'm hosting senior industry leaders or curating
+                    narratives for the next generation of thinkers, I strive to
+                    build bridges between insight and impact.
+                  </p>
+                  <p class="mb-4">
+                    The X-ceptional edge comes from a rare blend of empathy,
+                    structure, and curiosity — shaped by lived experience,
+                    sharpened through leadership at BIT Mesra, and tested on
+                    real stages with real audiences.
+                  </p>
+                  <p class="mb-0">
+                    I don't just speak or moderate — I synthesize. I don't just
+                    ask questions — I create space for answers to matter.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="xceptional-visual-container">
+                <div class="xceptional-highlight-box">
+                  <div class="highlight-item">
+                    <div class="highlight-icon">🎙️</div>
+                    <h4>Synthesize</h4>
+                    <p>
+                      Transform complex ideas into clear, actionable insights
+                    </p>
+                  </div>
+                  <div class="highlight-item">
+                    <div class="highlight-icon">🤝</div>
+                    <h4>Connect</h4>
+                    <p>
+                      Build bridges between diverse perspectives and audiences
+                    </p>
+                  </div>
+                  <div class="highlight-item">
+                    <div class="highlight-icon">💡</div>
+                    <h4>Elevate</h4>
+                    <p>
+                      Create space where every voice matters and answers
+                      resonate
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
