--- a/podcast.html
+++ b/podcast.html
@@ -46,8 +46,7 @@
               <a href="index.html" class="nav-link">Home</a>
               <a href="about.html" class="nav-link">About</a>
               <a href="podcast.html" class="nav-link active">Podcast</a>
-              <a href="#corporate" class="nav-link">Corporate Work</a>
-              <a href="#research" class="nav-link">Research</a>
+              <a href="allies.html" class="nav-link">Allies</a>
               <a href="contact.html" class="nav-link">Contact</a>
             </div>
 
@@ -77,8 +76,7 @@
               <a href="index.html" class="mobile-nav-link">Home</a>
               <a href="about.html" class="mobile-nav-link">About</a>
               <a href="podcast.html" class="mobile-nav-link active">Podcast</a>
-              <a href="#corporate" class="mobile-nav-link">Corporate Work</a>
-              <a href="#research" class="mobile-nav-link">Research</a>
+              <a href="allies.html" class="mobile-nav-link">Allies</a>
               <a href="contact.html" class="mobile-nav-link">Contact</a>
 
               <!-- Mobile Social Icons -->
@@ -102,19 +100,36 @@
     <!-- Podcast Hero Section -->
     <section class="podcast-hero-section py-5">
       <div class="container-fluid px-4">
-        <div class="podcast-hero-content text-center">
-          <h1 class="podcast-hero-title">
-            <img src="images1/voice-recorder_3208772.png" alt="" /> Podcast
-            Journey
-          </h1>
-          <p class="podcast-hero-subtitle">
-            Creating Meaningful Conversations with Industry Leaders
-          </p>
-          <p class="podcast-hero-description">
-            Through thoughtful dialogue and strategic questioning, I explore the
-            intersection of leadership, communication, and innovation with
-            distinguished professionals across industries.
-          </p>
+        <div class="row g-5 align-items-center podcast-hero-row">
+          <div class="col-lg-6">
+            <div class="podcast-hero-content text-center text-lg-start">
+              <h1 class="podcast-hero-title">
+                <img src="images1/voice-recorder_3208772.png" alt="" /><br />
+                Podcast <br />Journey
+              </h1>
+              <p class="podcast-hero-subtitle">
+                Creating Meaningful Conversations with Industry Leaders
+              </p>
+              <p class="podcast-hero-description">
+                Through thoughtful dialogue and strategic questioning, I explore
+                the intersection of leadership, communication, and innovation
+                with distinguished professionals across industries.
+              </p>
+            </div>
+          </div>
+          <div
+            class="col-lg-6 d-flex justify-content-center justify-content-lg-end"
+          >
+            <div class="podcast-hero-image-container">
+              <img
+                src="images1/podcast.jpg"
+                alt="Podcast recording and meaningful conversations"
+                class="podcast-hero-image"
+              />
+              <div class="podcast-decoration-1"></div>
+              <div class="podcast-decoration-2"></div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -353,7 +368,9 @@
             are shaping the future of business and communication.
           </p>
           <div class="guest-criteria mb-5">
-            <h3 class="criteria-title">Ideal Guests Include:</h3>
+            <h3 class="criteria-title">
+              We are particularly interested in connecting with:
+            </h3>
             <div class="criteria-list">
               <div class="criteria-item">
                 <div class="criteria-bullet"></div>
@@ -388,7 +405,7 @@
           <div class="guest-cta-buttons">
             <button class="btn btn-primary-custom btn-lg me-3 mb-3">
               <i data-lucide="mic" class="me-2"></i>
-              Apply to Be a Guest
+              Become a Guest
             </button>
             <button class="btn btn-outline-custom btn-lg mb-3">
               <i data-lucide="mail" class="me-2"></i>
