--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,40 @@
     <title>
       Contact - Anirudh Shankar | MBA | Corporate Communicator | Podcast Host
     </title>
+    <meta
+      name="description"
+      content="Contact Anirudh Shankar: MBA, Corporate Communicator, Podcast Host, and Strategic Facilitator. Let's collaborate!"
+    />
+    <meta
+      name="keywords"
+      content="Contact, Anirudh Shankar, MBA, Corporate Communicator, Podcast Host, Strategic Facilitator, Leadership, Communication, BIT Mesra"
+    />
+    <meta name="author" content="Anirudh Shankar" />
+    <link rel="canonical" href="https://yourdomain.com/contact.html" />
+    <link rel="icon" type="image/png" href="images1/HERO.PNG" />
+    <!-- Open Graph Meta Tags -->
+    <meta
+      property="og:title"
+      content="Contact - Anirudh Shankar | MBA | Corporate Communicator | Podcast Host"
+    />
+    <meta
+      property="og:description"
+      content="Contact Anirudh Shankar: MBA, Corporate Communicator, Podcast Host, and Strategic Facilitator. Let's collaborate!"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com/contact.html" />
+    <meta property="og:image" content="images1/HERO.PNG" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Contact - Anirudh Shankar | MBA | Corporate Communicator | Podcast Host"
+    />
+    <meta
+      name="twitter:description"
+      content="Contact Anirudh Shankar: MBA, Corporate Communicator, Podcast Host, and Strategic Facilitator. Let's collaborate!"
+    />
+    <meta name="twitter:image" content="images1/HERO.PNG" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -26,6 +60,12 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css" />
+
+    <!-- AOS Animation CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
+    />
   </head>
   <body>
     <!-- Modern Rounded Navigation -->
@@ -35,10 +75,12 @@
           <div class="nav-content">
             <!-- Brand Name -->
             <div class="brand">
-              <h1 class="brand-text">
-                <span class="fw-normal">Anirudh</span>
-                <span class="fw-bold ms-1">Shankar</span>
-              </h1>
+              <a href="index.html" class="brand-link">
+                <h1 class="brand-text">
+                  <span class="fw-normal">Anirudh</span>
+                  <span class="fw-bold ms-1">Shankar</span>
+                </h1>
+              </a>
             </div>
 
             <!-- Desktop Navigation Links -->
@@ -98,7 +140,7 @@
     </nav>
 
     <!-- Contact Hero Section -->
-    <section class="contact-hero-section py-5">
+    <section class="contact-hero-section py-5" data-aos="fade-up">
       <div class="container-fluid px-4">
         <div class="row g-5 align-items-center contact-hero-row">
           <div class="col-lg-6">
@@ -119,11 +161,11 @@
           <div
             class="col-lg-6 d-flex justify-content-center justify-content-lg-end"
           >
-            <div class="contact-hero-image-container">
+            <div class="contact-hero-image-container" data-aos="zoom-in">
               <img
                 src="images1/contact page.JPG"
                 alt="Professional collaboration workspace"
-                class="contact-hero-image"
+                class="contact-hero-image floating"
               />
               <div class="contact-decoration-1"></div>
               <div class="contact-decoration-2"></div>
@@ -139,7 +181,11 @@
         <div class="contact-info-content">
           <div class="row g-4 justify-content-center">
             <div class="col-md-6 col-lg-4">
-              <div class="contact-info-card text-center">
+              <div
+                class="contact-info-card text-center"
+                data-aos="fade-up"
+                data-aos-delay="100"
+              >
                 <div class="contact-icon">📬</div>
                 <h3 class="contact-info-title">Email</h3>
                 <p class="contact-info-detail">
@@ -153,7 +199,11 @@
               </div>
             </div>
             <div class="col-md-6 col-lg-4">
-              <div class="contact-info-card text-center">
+              <div
+                class="contact-info-card text-center"
+                data-aos="fade-up"
+                data-aos-delay="200"
+              >
                 <div class="contact-icon">🔗</div>
                 <h3 class="contact-info-title">LinkedIn</h3>
                 <p class="contact-info-detail">
@@ -168,7 +218,11 @@
               </div>
             </div>
             <div class="col-md-6 col-lg-4">
-              <div class="contact-info-card text-center">
+              <div
+                class="contact-info-card text-center"
+                data-aos="fade-up"
+                data-aos-delay="300"
+              >
                 <div class="contact-icon">📍</div>
                 <h3 class="contact-info-title">Location</h3>
                 <p class="contact-info-detail">
@@ -188,11 +242,11 @@
         <div class="contact-form-content">
           <div class="row g-5 align-items-center">
             <div class="col-lg-6">
-              <div class="contact-form-image-container">
+              <div class="contact-form-image-container" data-aos="zoom-in">
                 <img
                   src="images1/Untitled design.png"
                   alt="Team collaboration and communication"
-                  class="contact-form-image"
+                  class="contact-form-image floating"
                 />
                 <div class="form-decoration-1"></div>
                 <div class="form-decoration-2"></div>
@@ -256,7 +310,7 @@
                     <div class="col-12 text-center">
                       <button
                         type="submit"
-                        class="btn btn-primary-custom btn-lg"
+                        class="btn btn-primary-custom btn-lg transition duration-300 hover:scale-105 hover:shadow-lg"
                       >
                         <i data-lucide="send" class="me-2"></i>
                         Send Message
@@ -320,5 +374,31 @@
 
     <!-- Custom JS -->
     <script src="script.js"></script>
+
+    <!-- AOS Animation JS -->
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init({ once: true });
+      // Mobile menu toggle
+      const mobileMenuBtn = document.getElementById("mobileMenuBtn");
+      const mobileMenu = document.getElementById("mobileMenu");
+      mobileMenuBtn.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+      });
+    </script>
+    <style>
+      .floating {
+        animation: floating 3s ease-in-out infinite;
+      }
+      @keyframes floating {
+        0%,
+        100% {
+          transform: translateY(0);
+        }
+        50% {
+          transform: translateY(-12px);
+        }
+      }
+    </style>
   </body>
 </html>
