--- a/about.html
+++ b/about.html
@@ -6,6 +6,40 @@
     <title>
       About - Anirudh Shankar | MBA | Corporate Communicator | Podcast Host
     </title>
+    <meta
+      name="description"
+      content="Learn more about Anirudh Shankar: MBA, Corporate Communicator, Podcast Host, and Strategic Facilitator. Bridging ideas, inspiring dialogue, and leading through communication."
+    />
+    <meta
+      name="keywords"
+      content="About Anirudh Shankar, MBA, Corporate Communicator, Podcast Host, Strategic Facilitator, Leadership, Communication, BIT Mesra"
+    />
+    <meta name="author" content="Anirudh Shankar" />
+    <link rel="canonical" href="https://yourdomain.com/about.html" />
+    <link rel="icon" type="image/png" href="images1/HERO.PNG" />
+    <!-- Open Graph Meta Tags -->
+    <meta
+      property="og:title"
+      content="About - Anirudh Shankar | MBA | Corporate Communicator | Podcast Host"
+    />
+    <meta
+      property="og:description"
+      content="Learn more about Anirudh Shankar: MBA, Corporate Communicator, Podcast Host, and Strategic Facilitator."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com/about.html" />
+    <meta property="og:image" content="images1/HERO.PNG" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="About - Anirudh Shankar | MBA | Corporate Communicator | Podcast Host"
+    />
+    <meta
+      name="twitter:description"
+      content="Learn more about Anirudh Shankar: MBA, Corporate Communicator, Podcast Host, and Strategic Facilitator."
+    />
+    <meta name="twitter:image" content="images1/HERO.PNG" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -26,6 +60,12 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css" />
+
+    <!-- AOS Animation CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
+    />
   </head>
   <body>
     <!-- Modern Rounded Navigation -->
@@ -35,10 +75,12 @@
           <div class="nav-content">
             <!-- Brand Name -->
             <div class="brand">
-              <h1 class="brand-text">
-                <span class="fw-normal">Anirudh</span>
-                <span class="fw-bold ms-1">Shankar</span>
-              </h1>
+              <a href="index.html" class="brand-link">
+                <h1 class="brand-text">
+                  <span class="fw-normal">Anirudh</span>
+                  <span class="fw-bold ms-1">Shankar</span>
+                </h1>
+              </a>
             </div>
 
             <!-- Desktop Navigation Links -->
@@ -98,7 +140,7 @@
     </nav>
 
     <!-- About Hero Section -->
-    <section class="about-hero-section py-5">
+    <section class="about-hero-section py-5" data-aos="fade-up">
       <div class="container-fluid px-4">
         <div class="about-hero-content text-center">
           <h1 class="about-hero-title">About Anirudh Shankar</h1>
@@ -115,11 +157,11 @@
         <div class="about-intro-content">
           <div class="row align-items-center g-5">
             <div class="col-lg-6">
-              <div class="about-image-container">
+              <div class="about-image-container" data-aos="zoom-in">
                 <img
                   src="images1/IMG_2935.jpg"
                   alt="Anirudh Shankar"
-                  class="about-image"
+                  class="about-image floating"
                 />
               </div>
             </div>
@@ -154,7 +196,11 @@
         <h2 class="section-title text-center mb-5">Core Values & Philosophy</h2>
         <div class="row g-4 mb-5">
           <div class="col-md-6 col-lg-3">
-            <div class="value-card text-center">
+            <div
+              class="value-card text-center"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="value-icon">🎯</div>
               <h3 class="value-title">Purpose-Driven Communication</h3>
               <p class="value-description">
@@ -164,7 +210,11 @@
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
-            <div class="value-card text-center">
+            <div
+              class="value-card text-center"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
               <div class="value-icon">🤝</div>
               <h3 class="value-title">Authentic Relationships</h3>
               <p class="value-description">
@@ -174,7 +224,11 @@
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
-            <div class="value-card text-center">
+            <div
+              class="value-card text-center"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
               <div class="value-icon">🌱</div>
               <h3 class="value-title">Continuous Learning</h3>
               <p class="value-description">
@@ -184,7 +238,11 @@
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
-            <div class="value-card text-center">
+            <div
+              class="value-card text-center"
+              data-aos="fade-up"
+              data-aos-delay="400"
+            >
               <div class="value-icon">⚡</div>
               <h3 class="value-title">Innovation in Tradition</h3>
               <p class="value-description">
@@ -321,5 +379,33 @@
 
     <!-- Custom JS -->
     <script src="script.js"></script>
+
+    <!-- AOS Animation JS -->
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init({ once: true });
+      // Mobile menu toggle
+      const mobileMenuBtn = document.getElementById("mobileMenuBtn");
+      const mobileMenu = document.getElementById("mobileMenu");
+      mobileMenuBtn.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+      });
+    </script>
+
+    <!-- Floating Animation CSS -->
+    <style>
+      .floating {
+        animation: floating 3s ease-in-out infinite;
+      }
+      @keyframes floating {
+        0%,
+        100% {
+          transform: translateY(0);
+        }
+        50% {
+          transform: translateY(-12px);
+        }
+      }
+    </style>
   </body>
 </html>
