--- a/allies.html
+++ b/allies.html
@@ -6,6 +6,40 @@
     <title>
       Allies - Anirudh Shankar | MBA | Corporate Communicator | Podcast Host
     </title>
+    <meta
+      name="description"
+      content="Meet the allies and collaborators of Anirudh Shankar: MBA, Corporate Communicator, Podcast Host, and Strategic Facilitator."
+    />
+    <meta
+      name="keywords"
+      content="Allies, Collaborators, Anirudh Shankar, MBA, Corporate Communicator, Podcast Host, Strategic Facilitator, Leadership, Communication, BIT Mesra"
+    />
+    <meta name="author" content="Anirudh Shankar" />
+    <link rel="canonical" href="https://yourdomain.com/allies.html" />
+    <link rel="icon" type="image/png" href="images1/HERO.PNG" />
+    <!-- Open Graph Meta Tags -->
+    <meta
+      property="og:title"
+      content="Allies - Anirudh Shankar | MBA | Corporate Communicator | Podcast Host"
+    />
+    <meta
+      property="og:description"
+      content="Meet the allies and collaborators of Anirudh Shankar: MBA, Corporate Communicator, Podcast Host, and Strategic Facilitator."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com/allies.html" />
+    <meta property="og:image" content="images1/HERO.PNG" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Allies - Anirudh Shankar | MBA | Corporate Communicator | Podcast Host"
+    />
+    <meta
+      name="twitter:description"
+      content="Meet the allies and collaborators of Anirudh Shankar: MBA, Corporate Communicator, Podcast Host, and Strategic Facilitator."
+    />
+    <meta name="twitter:image" content="images1/HERO.PNG" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -26,6 +60,12 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css" />
+
+    <!-- AOS Animation CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
+    />
   </head>
   <body>
     <!-- Modern Rounded Navigation -->
@@ -35,10 +75,12 @@
           <div class="nav-content">
             <!-- Brand Name -->
             <div class="brand">
-              <h1 class="brand-text">
-                <span class="fw-normal">Anirudh</span>
-                <span class="fw-bold ms-1">Shankar</span>
-              </h1>
+              <a href="index.html" class="brand-link">
+                <h1 class="brand-text">
+                  <span class="fw-normal">Anirudh</span>
+                  <span class="fw-bold ms-1">Shankar</span>
+                </h1>
+              </a>
             </div>
 
             <!-- Desktop Navigation Links -->
@@ -98,7 +140,7 @@
     </nav>
 
     <!-- Allies Hero Section -->
-    <section class="allies-hero-section py-5">
+    <section class="allies-hero-section py-5" data-aos="fade-up">
       <div class="container-fluid px-4">
         <div class="allies-hero-content text-center">
           <h1 class="allies-hero-title">Allies</h1>
@@ -117,12 +159,16 @@
           <div class="row g-5">
             <!-- Amal Pushp Card -->
             <div class="col-lg-6">
-              <div class="collaborator-card collaborator-card-white">
-                <div class="collaborator-photo-container">
+              <div
+                class="collaborator-card collaborator-card-white"
+                data-aos="fade-up"
+                data-aos-delay="100"
+              >
+                <div class="collaborator-photo-container" data-aos="zoom-in">
                   <img
                     src="images1/placeholder-amal.jpg"
                     alt="Amal Pushp"
-                    class="collaborator-photo"
+                    class="collaborator-photo floating"
                   />
                 </div>
                 <h3 class="collaborato-name">Amal Pushp</h3>
@@ -195,12 +241,16 @@
 
             <!-- Harshitaa Tiwari Card -->
             <div class="col-lg-6">
-              <div class="collaborator-card collaborator-card-blue">
-                <div class="collaborator-photo-container">
+              <div
+                class="collaborator-card collaborator-card-blue"
+                data-aos="fade-up"
+                data-aos-delay="200"
+              >
+                <div class="collaborator-photo-container" data-aos="zoom-in">
                   <img
                     src="images1/harshita.jpeg"
                     alt="Harshitaa Tiwari"
-                    class="collaborator-photo"
+                    class="collaborator-photo floating"
                   />
                 </div>
                 <h3 class="collaborato-namee">Harshitaa Tiwari</h3>
@@ -296,5 +346,31 @@
 
     <!-- Custom JS -->
     <script src="script.js"></script>
+
+    <!-- AOS Animation JS -->
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init({ once: true });
+      // Mobile menu toggle
+      const mobileMenuBtn = document.getElementById("mobileMenuBtn");
+      const mobileMenu = document.getElementById("mobileMenu");
+      mobileMenuBtn.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+      });
+    </script>
+    <style>
+      .floating {
+        animation: floating 3s ease-in-out infinite;
+      }
+      @keyframes floating {
+        0%,
+        100% {
+          transform: translateY(0);
+        }
+        50% {
+          transform: translateY(-12px);
+        }
+      }
+    </style>
   </body>
 </html>
