--- a/podcast.html
+++ b/podcast.html
@@ -6,6 +6,40 @@
     <title>
       Podcast - Anirudh Shankar | MBA | Corporate Communicator | Podcast Host
     </title>
+    <meta
+      name="description"
+      content="Explore the podcast journey of Anirudh Shankar: MBA, Corporate Communicator, Podcast Host, and Strategic Facilitator. Meaningful conversations with industry leaders."
+    />
+    <meta
+      name="keywords"
+      content="Podcast, Anirudh Shankar, MBA, Corporate Communicator, Podcast Host, Strategic Facilitator, Leadership, Communication, BIT Mesra"
+    />
+    <meta name="author" content="Anirudh Shankar" />
+    <link rel="canonical" href="https://yourdomain.com/podcast.html" />
+    <link rel="icon" type="image/png" href="images1/HERO.PNG" />
+    <!-- Open Graph Meta Tags -->
+    <meta
+      property="og:title"
+      content="Podcast - Anirudh Shankar | MBA | Corporate Communicator | Podcast Host"
+    />
+    <meta
+      property="og:description"
+      content="Explore the podcast journey of Anirudh Shankar: MBA, Corporate Communicator, Podcast Host, and Strategic Facilitator. Meaningful conversations with industry leaders."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com/podcast.html" />
+    <meta property="og:image" content="images1/HERO.PNG" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Podcast - Anirudh Shankar | MBA | Corporate Communicator | Podcast Host"
+    />
+    <meta
+      name="twitter:description"
+      content="Explore the podcast journey of Anirudh Shankar: MBA, Corporate Communicator, Podcast Host, and Strategic Facilitator. Meaningful conversations with industry leaders."
+    />
+    <meta name="twitter:image" content="images1/HERO.PNG" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -26,6 +60,12 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css" />
+
+    <!-- AOS Animation CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
+    />
   </head>
   <body>
     <!-- Modern Rounded Navigation -->
@@ -35,10 +75,12 @@
           <div class="nav-content">
             <!-- Brand Name -->
             <div class="brand">
-              <h1 class="brand-text">
-                <span class="fw-normal">Anirudh</span>
-                <span class="fw-bold ms-1">Shankar</span>
-              </h1>
+              <a href="index.html" class="brand-link">
+                <h1 class="brand-text">
+                  <span class="fw-normal">Anirudh</span>
+                  <span class="fw-bold ms-1">Shankar</span>
+                </h1>
+              </a>
             </div>
 
             <!-- Desktop Navigation Links -->
@@ -98,7 +140,7 @@
     </nav>
 
     <!-- Podcast Hero Section -->
-    <section class="podcast-hero-section py-5">
+    <section class="podcast-hero-section py-5" data-aos="fade-up">
       <div class="container-fluid px-4">
         <div class="row g-5 align-items-center podcast-hero-row">
           <div class="col-lg-6">
@@ -120,11 +162,11 @@
           <div
             class="col-lg-6 d-flex justify-content-center justify-content-lg-end"
           >
-            <div class="podcast-hero-image-container">
+            <div class="podcast-hero-image-container" data-aos="zoom-in">
               <img
                 src="images1/podcast.jpg"
                 alt="Podcast recording and meaningful conversations"
-                class="podcast-hero-image"
+                class="podcast-hero-image floating"
               />
               <div class="podcast-decoration-1"></div>
               <div class="podcast-decoration-2"></div>
@@ -195,7 +237,11 @@
         <h2 class="section-title text-center mb-5">Featured Episodes</h2>
         <div class="episodes-grid">
           <!-- Episode 1 -->
-          <div class="episode-card mb-5">
+          <div
+            class="episode-card mb-5"
+            data-aos="fade-up"
+            data-aos-delay="100"
+          >
             <div class="row g-4 align-items-center">
               <div class="col-lg-8">
                 <div class="episode-content">
@@ -441,5 +487,31 @@
 
     <!-- Custom JS -->
     <script src="script.js"></script>
+
+    <!-- AOS Animation JS -->
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init({ once: true });
+      // Mobile menu toggle
+      const mobileMenuBtn = document.getElementById("mobileMenuBtn");
+      const mobileMenu = document.getElementById("mobileMenu");
+      mobileMenuBtn.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+      });
+    </script>
+    <style>
+      .floating {
+        animation: floating 3s ease-in-out infinite;
+      }
+      @keyframes floating {
+        0%,
+        100% {
+          transform: translateY(0);
+        }
+        50% {
+          transform: translateY(-12px);
+        }
+      }
+    </style>
   </body>
 </html>
