--- a/allies.html
+++ b/allies.html
@@ -164,69 +164,81 @@
                 data-aos="fade-up"
                 data-aos-delay="100"
               >
-                <div class="collaborator-photo-container" data-aos="zoom-in">
-                  <img
-                    src="images1/placeholder-amal.jpg"
-                    alt="Amal Pushp"
-                    class="collaborator-photo floating"
-                  />
+                <div class="collaborator-profile-container" data-aos="zoom-in">
+                  <div class="collaborator-image-wrapper">
+                    <img
+                      src="images1/"
+                      alt="Amal Pushp"
+                      class="collaborator-profile-image"
+                    />
+                  </div>
+                  <div class="collaborator-info">
+                    <h3 class="collaborator-name">Amal Pushp</h3>
+                    <p class="collaborator-title">
+                      Fellow, Royal Astronomical Society | Consulting Physicist
+                      | Science Writer
+                    </p>
+                    <a
+                      href="https://linkedin.com/in/amal-pushp"
+                      target="_blank"
+                      class="linkedin-link"
+                    >
+                      <i data-lucide="linkedin"></i>
+                    </a>
+                  </div>
                 </div>
-                <h3 class="collaborato-name">Amal Pushp</h3>
-                <p class="collaborator-title">
-                  Fellow, Royal Astronomical Society | Consulting Physicist |
-                  Science Writer
-                </p>
 
                 <div class="collaborator-highlights">
                   <div class="highlight-item">
                     <div class="highlight-bullet"></div>
                     <p>
                       One of the youngest Indian Fellows of the Royal
-                      Astronomical Society (London)
+                      Astronomical Society (London), bringing cutting-edge
+                      astrophysics research to global platforms.
                     </p>
                   </div>
                   <div class="highlight-item">
                     <div class="highlight-bullet"></div>
                     <p>
-                      Authored 60+ technical articles and several peer-reviewed
-                      papers, including:
-                    </p>
-                    <ul class="sub-highlights">
-                      <li>
-                        "The Dead-Alive Physicist Gedankenexperiment Debunked"
-                      </li>
-                      <li>
-                        "Can Naked Singularities Exist Without Violating The
-                        Laws of Black Hole Thermodynamics?"
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="highlight-item">
-                    <div class="highlight-bullet"></div>
-                    <p>
-                      Consulting physicist for the International Space
-                      Federation, Resonance Science Foundation, and Torus Tech
-                      LLC
+                      Prolific science writer with 60+ technical articles and
+                      groundbreaking peer-reviewed papers, including landmark
+                      works on quantum mechanics and black hole thermodynamics
+                      that challenge conventional scientific thinking.
                     </p>
                   </div>
                   <div class="highlight-item">
                     <div class="highlight-bullet"></div>
                     <p>
-                      Recognized by Sir Martin Rees, Astronomer Royal of Britain
+                      Consulting physicist for prestigious organizations
+                      including the International Space Federation, Resonance
+                      Science Foundation, and Torus Tech LLC, bridging
+                      theoretical physics with practical applications.
                     </p>
                   </div>
                   <div class="highlight-item">
                     <div class="highlight-bullet"></div>
                     <p>
-                      President of Olympia Academia, growing it to 300+ members
-                      with speakers from Caltech and NASA
+                      Recognized by Sir Martin Rees, Astronomer Royal of
+                      Britain, for exceptional contributions to astrophysics and
+                      science communication.
                     </p>
                   </div>
                   <div class="highlight-item">
                     <div class="highlight-bullet"></div>
                     <p>
-                      Featured in Times of India, The Telegraph, Oxford
-                      University Press
+                      President of Olympia Academia, successfully growing the
+                      organization to 300+ members while hosting distinguished
+                      speakers from Caltech, NASA, and other world-renowned
+                      institutions.
+                    </p>
+                  </div>
+                  <div class="highlight-item">
+                    <div class="highlight-bullet"></div>
+                    <p>
+                      Featured across major publications including Times of
+                      India, The Telegraph, and Oxford University Press,
+                      establishing himself as a leading voice in science
+                      communication.
                     </p>
                   </div>
                   <blockquote class="collaborator-quote">
@@ -246,17 +258,28 @@
                 data-aos="fade-up"
                 data-aos-delay="200"
               >
-                <div class="collaborator-photo-container" data-aos="zoom-in">
-                  <img
-                    src="images1/harshita.jpeg"
-                    alt="Harshitaa Tiwari"
-                    class="collaborator-photo floating"
-                  />
+                <div class="collaborator-profile-container" data-aos="zoom-in">
+                  <div class="collaborator-image-wrapper">
+                    <img
+                      src="images1/allies2.png"
+                      alt="Harshitaa Tiwari"
+                      class="collaborator-profile-image"
+                    />
+                  </div>
+                  <div class="collaborator-info">
+                    <h3 class="collaborator-name">Harshitaa Tiwari</h3>
+                    <p class="collaborator-title">
+                      MBA Candidate (Marketing & HR) | Human-Centric Strategist
+                    </p>
+                    <a
+                      href="https://linkedin.com/in/harshitaa-tiwari"
+                      target="_blank"
+                      class="linkedin-link"
+                    >
+                      <i data-lucide="linkedin"></i>
+                    </a>
+                  </div>
                 </div>
-                <h3 class="collaborato-namee">Harshitaa Tiwari</h3>
-                <p class="collaborator-titlee">
-                  MBA Candidate (Marketing & HR) | Human-Centric Strategist
-                </p>
 
                 <div class="collaborator-highlights">
                   <div class="highlight-item">
@@ -290,7 +313,13 @@
                     <div class="highlight-bullet"></div>
                     <p>
                       Blends psychological insight with management strategy for
-                      real-world impact
+                      real-world impact<br /><br />
+                      When it comes to getting things done seamlessly,
+                      Harshitaa's your person. She uses her HR experience to
+                      good effect, enjoying the process of organizing meaningful
+                      projects. She's that reliable force behind the scenes,
+                      ensuring everything from events to team dynamics operates
+                      smoothly and efficiently.
                     </p>
                   </div>
                 </div>
@@ -326,11 +355,43 @@
       <div class="container-fluid px-4">
         <div class="footer-content text-center">
           <hr class="footer-separator mb-4" />
-          <p class="footer-quote mb-3">
+
+          <!-- Footer Quote -->
+          <p class="footer-quote mb-4">
             "Communication isn't just what we say — it's how we connect."
           </p>
+
+          <!-- Social Media Icons -->
+          <div class="footer-social-icons mb-4">
+            <a href="#" class="footer-social-icon">
+              <i data-lucide="facebook"></i>
+            </a>
+            <a href="#" class="footer-social-icon">
+              <i data-lucide="instagram"></i>
+            </a>
+            <a href="#" class="footer-social-icon">
+              <i data-lucide="twitter"></i>
+            </a>
+            <a href="#" class="footer-social-icon">
+              <i data-lucide="globe"></i>
+            </a>
+            <a href="#" class="footer-social-icon">
+              <i data-lucide="youtube"></i>
+            </a>
+          </div>
+
+          <!-- Footer Navigation -->
+          <div class="footer-navigation mb-4">
+            <a href="index.html" class="footer-nav-link">Home</a>
+            <a href="about.html" class="footer-nav-link">About</a>
+            <a href="podcast.html" class="footer-nav-link">Podcast</a>
+            <a href="allies.html" class="footer-nav-link">Allies</a>
+            <a href="contact.html" class="footer-nav-link">Contact</a>
+          </div>
+
           <p class="footer-copyright">
-            © 2024 Anirudh Shankar. All rights reserved.
+            © 2025 Anirudh Shankar. All rights reserved. Made by Mitul
+            Srivastava
           </p>
         </div>
       </div>
@@ -358,19 +419,5 @@
         mobileMenu.classList.toggle("hidden");
       });
     </script>
-    <style>
-      .floating {
-        animation: floating 3s ease-in-out infinite;
-      }
-      @keyframes floating {
-        0%,
-        100% {
-          transform: translateY(0);
-        }
-        50% {
-          transform: translateY(-12px);
-        }
-      }
-    </style>
   </body>
 </html>
