--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
                 <img
                   src="images1/IMG_2935.jpg"
                   alt="Anirudh Shankar"
-                  class="about-image floating"
+                  class="about-image"
                 />
               </div>
             </div>
@@ -359,11 +359,43 @@
       <div class="container-fluid px-4">
         <div class="footer-content text-center">
           <hr class="footer-separator mb-4" />
-          <p class="footer-quote mb-3">
+
+          <!-- Footer Quote -->
+          <p class="footer-quote mb-4">
             "Communication isn't just what we say — it's how we connect."
           </p>
+
+          <!-- Social Media Icons -->
+          <div class="footer-social-icons mb-4">
+            <a href="#" class="footer-social-icon">
+              <i data-lucide="facebook"></i>
+            </a>
+            <a href="#" class="footer-social-icon">
+              <i data-lucide="instagram"></i>
+            </a>
+            <a href="#" class="footer-social-icon">
+              <i data-lucide="twitter"></i>
+            </a>
+            <a href="#" class="footer-social-icon">
+              <i data-lucide="globe"></i>
+            </a>
+            <a href="#" class="footer-social-icon">
+              <i data-lucide="youtube"></i>
+            </a>
+          </div>
+
+          <!-- Footer Navigation -->
+          <div class="footer-navigation mb-4">
+            <a href="index.html" class="footer-nav-link">Home</a>
+            <a href="about.html" class="footer-nav-link">About</a>
+            <a href="podcast.html" class="footer-nav-link">Podcast</a>
+            <a href="allies.html" class="footer-nav-link">Allies</a>
+            <a href="contact.html" class="footer-nav-link">Contact</a>
+          </div>
+
           <p class="footer-copyright">
-            © 2024 Anirudh Shankar. All rights reserved.
+            © 2025 Anirudh Shankar. All rights reserved. Made by Mitul
+            Srivastava
           </p>
         </div>
       </div>
@@ -391,21 +423,5 @@
         mobileMenu.classList.toggle("hidden");
       });
     </script>
-
-    <!-- Floating Animation CSS -->
-    <style>
-      .floating {
-        animation: floating 3s ease-in-out infinite;
-      }
-      @keyframes floating {
-        0%,
-        100% {
-          transform: translateY(0);
-        }
-        50% {
-          transform: translateY(-12px);
-        }
-      }
-    </style>
   </body>
 </html>
